# qiskit-nature-projection-embedding

./: README.md  demo.py  pyproject.toml
.github/: CODEOWNERS
projection_embedding/: __init__.py  projection_embedding.py  pyscf_pipek_mezey_partitioning.py  spade_partitioning.py  utils.py
projection_embedding/fock_builders/: __init__.py  hartree_fock_builder.py  interface.py  pyscf_dft_builder.py
projection_embedding/occupied_orbital_partitioning/: __init__.py  interface.py  pyscf_pipek_mezey_partitioning.py  spade_partitioning.py
projection_embedding/virtual_orbital_localization/: __init__.py  concentric_localization.py  interface.py
tests/: test_projection_embedding.py
